--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+
 opencv-python==4.10.0.84
 numpy==1.26.4
 onnxruntime==1.23.1
@@ -6,3 +7,6 @@ ultralytics==8.3.0
 easyocr==1.7.2
 paddlepaddle
 paddleocr
+Flask==3.0.0
+Flask-CORS==4.0.0
+requests==2.31.0
